top 2 section updated

--- a/index.html
+++ b/index.html
@@ -5,9 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farhan Hasin Chowdhury | Full Stack Web Developer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+    <h1>Welcome To</h1>
+    <h1><span class="clr_orange">Farhan's</span> World</h1>
+
+    <h3>Web, Wordpress & Shopify Expert</h3>
+    <p>Hi, I am Farhan Hasin Chowdhury, an ecommerce and shopify expert having worked in various online marketplace completing more than 350+ web projects with 250+ clients. </p>
+    <a class="link-btn" href="#" target="_blank">HIRE ME</a>
+
+        </div>
+
+        <div class="half-width">
+            <img src="images/farhan.jpg" alt="Farhan Hasin Chowdhury">
+        </div>
+    </section>
+
+    <!-- Dream Big Section Starts !-->
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/farhan.jpg" alt="Farhan Hasin Chowdhury">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>To Become A Web Developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos vero temporibus sint ratione odio doloribus fugiat fugit voluptatem. Veritatis facere maxime neque repellat sapiente adipisci expedita, corporis saepe accusamus autem.</p>
+            <a class="link-btn" href="#" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
     
 </body>
 </html>
